Added pages and routes for entire structure

--- a/src/app/features/header/main-nav/main-nav.component.html
+++ b/src/app/features/header/main-nav/main-nav.component.html
@@ -3,9 +3,9 @@
         <nav class = "nav-bar">
             <ul class="nav-items">
             <a class="logo" href="#"><p class="logo">Peaks</p></a>
-                <li class="nav-item sec2"><a href="#" class="nav-link 1">Profile</a></li>
-                <li class="nav-item sec1"><a href="#" class="nav-link 2">Explore</a></li>
-                <li class="nav-item sec1"><a href="#" class="nav-link 3">Nearby</a></li>
+                <li class="nav-item sec2"><a class="nav-link 1" [routerLink]="'/profile'">Profile</a></li>
+                <li class="nav-item sec1"><a class="nav-link 2" [routerLink]="'/explore'">Explore</a></li>
+                <li class="nav-item sec1"><a class="nav-link 3" [routerLink]="'/nearby'">Nearby</a></li>
             </ul>
         </nav>
     </header>
