Finished pulling data for plans and specific plans in explore article

--- a/src/app/features/header/main-nav/main-nav.component.scss
+++ b/src/app/features/header/main-nav/main-nav.component.scss
@@ -28,6 +28,7 @@ p.logo{
     cursor: pointer;
     background: black;
     position: fixed;
+    top: -2%;
 
     overflow: hidden;
     list-style-type: none;
