Restructured pages to show better relations and choice

--- a/src/app/features/explore/components/explore-article/explore-article.component.html
+++ b/src/app/features/explore/components/explore-article/explore-article.component.html
@@ -1,3 +1,6 @@
+
+<h2>It workssss</h2>
+
 <div class ="entireArticleCont" *ngFor="let item of specificArticle | async">
     <div class = "articleTitleCont">
         <div class = "articleTitle">
