allowed user to grab all events from explore/events

--- a/src/app/features/explore/components/explore-home/explore-home.component.html
+++ b/src/app/features/explore/components/explore-home/explore-home.component.html
@@ -7,3 +7,8 @@
 <p> The next task will be navigating between plans and events through this page</p>
 <p>I broke this down to allow users to choose specific cities</p>
 <p>A flaw is that it should be automatic. We could experiment with that later</p>
+
+
+
+<a [routerLink]="'plans'">Plans</a>
+<a [routerLink]="'events'">Events</a>
