created nearby map and searchcity component

--- a/src/app/pages/nearby-page/nearby-page.component.html
+++ b/src/app/pages/nearby-page/nearby-page.component.html
@@ -1,3 +1,5 @@
-<app-main-nav></app-main-nav>
 
 <p>nearby-page works!</p>
+
+<app-nearby-switchcity></app-nearby-switchcity>
+<app-nearby-map></app-nearby-map>
