added presenter comp and broke down large code

--- a/src/app/features/nearby/components/nearby-switchcity/nearby-switchcity.component.html
+++ b/src/app/features/nearby/components/nearby-switchcity/nearby-switchcity.component.html
@@ -1,11 +1,12 @@
-    <label for="city-select">Choose a city:</label>
+     <label for="city-select">Choose a city:</label>
 
-    <select name="cities" #citySelect (change)="selectionChange(citySelect.value)">
+    <select name="cities" #citySelect (change)="userList(citySelect.value)">
         <option value="">--Please choose an option--</option>
         <option value="Chicago">Chicago</option>
         <option value="San Francisco">San Francisco</option>
     </select>
 
+    <!--
     <img class = "cityImg" [src]="imageSan">
     <p>{{coordinatesSan}}</p>
     <p>{{currentCity}}</p>
@@ -15,3 +16,10 @@
 
 
     <h2>HEYYYy</h2>
+
+
+-->
+
+
+
+<h2>Switch City Comp</h2>
