--- a/src/app/pages/nearby-page/nearby-page.component.html
+++ b/src/app/pages/nearby-page/nearby-page.component.html
@@ -1,5 +1,4 @@
 
 <p>nearby-page works!</p>
 
-<app-nearby-switchcity></app-nearby-switchcity>
-<app-nearby-map></app-nearby-map>
+<app-nearby-view-map></app-nearby-view-map>
