--- a/src/app/features/nearby/components/nearby-map/nearby-map.component.html
+++ b/src/app/features/nearby/components/nearby-map/nearby-map.component.html
@@ -2,7 +2,7 @@
       <mgl-map
         [style]="'https://api.maptiler.com/maps/9534ef7d-c9d8-41b6-8955-46ef0283e901/style.json?key=FVjeFXupqnVfeknzKQkO'"
         [zoom]="[9]"
-        [center]="center2"
+        [center]="mapCord"
       >
         <mgl-geojson-source id="point">
             <mgl-feature
