added new york city option

--- a/src/app/features/nearby/components/nearby-view-map/nearby-view-map.component.html
+++ b/src/app/features/nearby/components/nearby-view-map/nearby-view-map.component.html
@@ -3,6 +3,7 @@
     <select name="cities" #citySelect (change)="works(citySelect.value)">
         <option value="">--Please choose an option--</option>
         <option value="Chicago">Chicago</option>
+        <option value="New York City">New York City</option>
         <option value="San Francisco">San Francisco</option>
     </select>
 
