--- a/src/app/features/nearby/components/nearby-map/nearby-map.component.html
+++ b/src/app/features/nearby/components/nearby-map/nearby-map.component.html
@@ -27,16 +27,10 @@
                 <div>Latitude:&nbsp;{{ coordinates[1] }}</div>
             </div>
           </mgl-control>
-
-          <mgl-marker [lngLat]="[-66.324462890625, -16.024695711685304]">
-              <div (click)="alert('Foo')"class="marker"style="background-image: url(https://placekitten.com/g/60/60/); width: 60px; height: 60px"></div>
-          </mgl-marker>
-          <mgl-marker [lngLat]="[-61.2158203125, -15.97189158092897]">
-              <div (click)="alert('Bar')" class="marker" style="background-image: url(https://placekitten.com/g/50/50/); width: 50px; height: 50px"></div>
-          </mgl-marker>
-          <mgl-marker [lngLat]="[-63.29223632812499, -18.28151823530889]">
-              <div (click)="alert('Baz')" class="marker" style="background-image: url(https://placekitten.com/g/40/40/); width: 40px; height: 40px"></div>
-          </mgl-marker>
+          
+        <div *ngFor="let place of mapPlaces">
+          <mgl-marker [lngLat]="[place.cord.longitude, place.cord.latitude]"></mgl-marker>
+        </div>
 
       </mgl-map>
   </div>
