--- a/src/app/features/nearby/components/nearby-map/nearby-map.component.scss
+++ b/src/app/features/nearby/components/nearby-map/nearby-map.component.scss
@@ -13,9 +13,13 @@
     width: 50px; 
     filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(225deg) brightness(101%) contrast(101%);
   }
-  
+
   .markerName{
     font-size: 16px;
     color: white;
   }
 
+  .eventPopImg{
+    height: 110px;
+    width: 175px;
+  }
