major rework of nearby routes

--- a/src/app/features/nearby/components/nearby-map/nearby-map.component.html
+++ b/src/app/features/nearby/components/nearby-map/nearby-map.component.html
@@ -63,6 +63,7 @@
                 <p>{{place.rating}}</p>
 
                 <p>{{place.city}}</p>
+                <a [routerLink]="['/nearby', sendCity, place.name]">See More</a>
             </mgl-popup>
 
 
