--- a/src/app/features/nearby/components/nearby-view-map/nearby-view-map.component.html
+++ b/src/app/features/nearby/components/nearby-view-map/nearby-view-map.component.html
@@ -1,15 +1,18 @@
 <label for="city-select">Choose a city:</label>
 
-    <select name="cities" #citySelect (change)="updateCity(citySelect.value)">
+    <select name="cities" [(ngModel)]="citySelec"  #citySelect (change)="updateCity(citySelect.value)">
         <option value="">--Please choose an option--</option>
         <option value="Chicago">Chicago</option>
         <option value="New York City">New York City</option>
         <option value="San Francisco">San Francisco</option>
     </select>
 
-    <h2>{{citySelect.value}}</h2>
+
+
+    <h2>{{newCity}}</h2>
     <img *ngIf="citiesServ.cityImg" class = "cityImg" [src]="citiesServ.cityImg">
+
 
 <!-- I tried seperating event pins from the map by nesting a child component inside <app-nearby-map> 
     This didn't work since ng-content is only used for static content projection -->
-<app-nearby-map [mapCord]="citiesServ.cityCord" [mapPlaces]="(citiesServ.places$ | async)"></app-nearby-map>   
+<app-nearby-map [mapCord]="citiesServ.cityCord" [mapPlaces]="(citiesServ.places$ | async)" [sendCity]="newCity"></app-nearby-map>   
