created a hyphen pipe to create uniform urls

--- a/src/app/features/nearby/components/nearby-map/nearby-map.component.html
+++ b/src/app/features/nearby/components/nearby-map/nearby-map.component.html
@@ -63,7 +63,7 @@
                 <p>{{place.rating}}</p>
 
                 <p>{{place.city}}</p>
-                <a [routerLink]="['/nearby', sendCity, place.name]">See More</a>
+                <a [routerLink]="['/nearby', (sendCity | hyphenate), (place.name.toLowerCase() | hyphenate)]">See More</a>
             </mgl-popup>
 
 
