hyphenated explore page urls

--- a/src/app/features/explore/components/explore-article/explore-article.component.html
+++ b/src/app/features/explore/components/explore-article/explore-article.component.html
@@ -1,5 +1,5 @@
 
-<div class ="entireArticleCont" *ngFor="let item of specificArticle | async">
+<div class ="entireArticleCont" *ngFor="let item of $specificArticle | async">
     <div class = "articleTitleCont">
         <div class = "articleTitle">
             <p>{{item.name}}</p>
