switch map style between night or morning mode

--- a/src/app/features/nearby/components/nearby-map/nearby-map.component.html
+++ b/src/app/features/nearby/components/nearby-map/nearby-map.component.html
@@ -1,6 +1,6 @@
   <div class="mapCont">
       <mgl-map
-        [style]="'https://api.maptiler.com/maps/9534ef7d-c9d8-41b6-8955-46ef0283e901/style.json?key=FVjeFXupqnVfeknzKQkO'"
+        [style]="mapStyle"
         [zoom]="[9]"
         [center]="mapCord"
       >
