feat: set or change your home location pin

--- a/src/app/features/nearby/components/nearby-map/nearby-map.component.html
+++ b/src/app/features/nearby/components/nearby-map/nearby-map.component.html
@@ -69,6 +69,11 @@
 
           </mgl-marker>
         </div>
+
+        <mgl-marker *ngIf="sendHomeCord" [lngLat]="[sendHomeCord.long, sendHomeCord.lat]">
+          <img class class="markerIcon" src="../../../../../assets/icon_home.svg">
+          <p>Home</p>
+        </mgl-marker>
       
       </mgl-map>
   </div>
