--- a/src/app/features/nearby/components/nearby-distance-pins/nearby-distance-pins.component.html
+++ b/src/app/features/nearby/components/nearby-distance-pins/nearby-distance-pins.component.html
@@ -1,13 +1,12 @@
 <h2>Set Distance Pins</h2>
 
+<h5 *ngIf="distanceNum">Distance Between Pins: {{distanceNum}}{{distUnit}}</h5>
+<button *ngIf="distanceNum"(click)="toggleMeters()">Change Distance to {{distUnit}}</button>
 
 <div *ngIf="sendHomeCord">
-    <h5 *ngIf="distanceNum">Distance Between Pins: {{distanceNum}} KM</h5>
-    <p>Pin 1: Home</p>
-    <p>{{sendHomeCord.lat}}, {{sendHomeCord.long}}</p>
+    <p>Pin 1: Home ({{sendHomeCord.lat}}, {{sendHomeCord.long}})</p>
 </div>
 
 <div *ngIf="pin2">
-    <p>Pin 2: {{pin2.place}}</p>
-    <p>{{pin2.cord[0]}}, {{pin2.cord[1]}}</p>
+    <p>Pin 2: {{pin2.place}} ({{pin2.cord[0]}}, {{pin2.cord[1]}})</p>
 </div>
