simplified distancepin comp and removable pins

--- a/src/app/features/nearby/components/nearby-view-map/nearby-view-map.component.html
+++ b/src/app/features/nearby/components/nearby-view-map/nearby-view-map.component.html
@@ -17,8 +17,7 @@
         <app-nearby-update-map [mapName]="mapViewServ.mapStyle" (ChangeMap)="changeClicked($event)"></app-nearby-update-map>
         <app-nearby-homepin (setCords)="changeHome($event)" [sendHomeCord]="mapViewServ.homeCord"></app-nearby-homepin>
         <app-nearby-distance-pins [pin2]="mapViewServ.secondPin" [sendHomeCord]="mapViewServ.homeCord" 
-        [distanceFN]="mapViewServ.calculateDistance"></app-nearby-distance-pins>
-
+        [distanceNum]="mapViewServ.distanceofPin" (resetPins)="resetSelectPin($event)" (toggleUnit)="updateDistanceUnit($event)"></app-nearby-distance-pins>
     </div>
 
 </div>
