--- a/src/app/features/nearby/components/nearby-distance-pins/nearby-distance-pins.component.html
+++ b/src/app/features/nearby/components/nearby-distance-pins/nearby-distance-pins.component.html
@@ -1,12 +1,14 @@
 <h2>Set Distance Pins</h2>
 
-<h5 *ngIf="distanceNum">Distance Between Pins: {{distanceNum}}{{distUnit}}</h5>
-<button *ngIf="distanceNum"(click)="toggleMeters()">Change Distance to {{distUnit}}</button>
+<h5 *ngIf="distanceNum" >Distance Between Pins: {{distanceNum}}{{distUnit}}</h5>
+<button *ngIf="distanceNum"(click)="toggleMeters()">Change Distance to {{distUnit2}}</button>
 
 <div *ngIf="sendHomeCord">
     <p>Pin 1: Home ({{sendHomeCord.lat}}, {{sendHomeCord.long}})</p>
+    <button (click)="resetPin(sendHomeCord)">Remove Pin</button>
 </div>
 
 <div *ngIf="pin2">
     <p>Pin 2: {{pin2.place}} ({{pin2.cord[0]}}, {{pin2.cord[1]}})</p>
+    <button (click)="resetPin(pin2)">Remove Pin</button>
 </div>
