--- a/src/app/features/nearby/components/nearby-homepin/nearby-homepin.component.html
+++ b/src/app/features/nearby/components/nearby-homepin/nearby-homepin.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="sendHomeCord">
    <p>Home Cord:</p>
-   <p>{{sendHomeCord.lat}}, {{sendHomeCord.long}}</p>
+   <p>{{sendHomeCord.long}}, {{sendHomeCord.lat}}</p>
 </div>
 
 <form #setPin="ngForm"(ngSubmit)="sendCord(setPin.value); setPin.resetForm()">
@@ -10,3 +10,4 @@
     <input type="number" ngModel placeholder="Enter Latitude" name="lat" required min="-90" max="90">
    <button [disabled]="!setPin.valid">Update Home</button>
 </form>
+<button *ngIf="sendHomeCord"(click)="homeDraggable()">{{homePinDragStatus}}</button>
